style(controller): improve the code style