@@ -1,3 +1,8 @@
+/*
+ * Copyright 2024 European Union. All rights reserved.
+ * European Union EUPL version 1.1.
+ */
+
 package eu.domibus.connector.controller.processor.steps;
 
 import eu.domibus.connector.controller.exception.DomibusConnectorMessageException;
@@ -21,15 +26,12 @@ import org.springframework.stereotype.Component;
 
 /**
  * Processes an evidence trigger message
- *  the evidence trigger only contains a refToMessageId
- *  all other AS4 attributes must be read from the business message
- *
+ * the evidence trigger only contains a refToMessageId.
+ * All other AS4 attributes must be read from the business message
  */
 @Component
 public class EvidenceTriggerStep implements MessageProcessStep {
-
     private static final Logger LOGGER = LogManager.getLogger(EvidenceTriggerStep.class);
-
     private final FindBusinessMessageByMsgId findBusinessMessageByMsgId;
     private final ConfirmationCreatorService confirmationCreatorService;
 
@@ -41,38 +43,55 @@ public class EvidenceTriggerStep implements MessageProcessStep {
     }
 
     @Override
-    @MDC(name = LoggingMDCPropertyNames.MDC_DC_STEP_PROCESSOR_PROPERTY_NAME, value = "EvidenceTriggerStep")
+    @MDC(
+        name = LoggingMDCPropertyNames.MDC_DC_STEP_PROCESSOR_PROPERTY_NAME,
+        value = "EvidenceTriggerStep"
+    )
     public boolean executeStep(DomibusConnectorMessage evidenceTriggerMsg) {
 
-        //is evidence triggering allowed
+        // is evidence triggering allowed
         isEvidenceTriggeringAllowed(evidenceTriggerMsg);
 
-        //only incoming evidence messages are looked up
-        DomibusConnectorMessage businessMsg = findBusinessMessageByMsgId.findBusinessMessageByIdAndDirection(evidenceTriggerMsg, DomibusConnectorMessageDirection.GATEWAY_TO_BACKEND);
-        DomibusConnectorMessageDetails businessMsgDetails = businessMsg.getMessageDetails();
+        // only incoming evidence messages are looked up
+        DomibusConnectorMessage businessMsg =
+            findBusinessMessageByMsgId.findBusinessMessageByIdAndDirection(
+                evidenceTriggerMsg,
+                DomibusConnectorMessageDirection.GATEWAY_TO_BACKEND
+            );
 
         DomibusConnectorEvidenceType evidenceType = getEvidenceType(evidenceTriggerMsg);
 
-        //create evidence
-        DomibusConnectorMessageConfirmation confirmation = confirmationCreatorService.createConfirmation(evidenceType, businessMsg, DomibusConnectorRejectionReason.OTHER, "");
-        LOGGER.info(LoggingMarker.Log4jMarker.BUSINESS_LOG, "Successfully created evidence [{}] for evidence trigger", evidenceType);
+        // create evidence
+        DomibusConnectorMessageConfirmation confirmation =
+            confirmationCreatorService.createConfirmation(
+                evidenceType, businessMsg, DomibusConnectorRejectionReason.OTHER, ""
+            );
+        LOGGER.info(
+            LoggingMarker.Log4jMarker.BUSINESS_LOG,
+            "Successfully created evidence [{}] for evidence trigger", evidenceType
+        );
 
-        //set generated evidence into the trigger message
-//        ConfirmationCreatorService.DomibusConnectorMessageConfirmationWrapper evidenceWrapper = confirmation.build();
-        evidenceTriggerMsg.getTransportedMessageConfirmations().get(0)
-                .setEvidence(confirmation.getEvidence());
+        // set generated evidence into the trigger message
+        // ConfirmationCreatorService.DomibusConnectorMessageConfirmationWrapper evidenceWrapper
+        // = confirmation.build();
+        evidenceTriggerMsg.getTransportedMessageConfirmations().getFirst()
+            .setEvidence(confirmation.getEvidence());
 
-        DomibusConnectorMessageDetails evidenceTriggerMsgDetails = evidenceTriggerMsg.getMessageDetails();
+        DomibusConnectorMessageDetails evidenceTriggerMsgDetails =
+            evidenceTriggerMsg.getMessageDetails();
 
-        //set correct action for evidence message
-        evidenceTriggerMsgDetails.setAction(confirmationCreatorService.createEvidenceAction(confirmation.getEvidenceType()));
-        //set correct service derived from business msg
+        // set correct action for evidence message
+        evidenceTriggerMsgDetails.setAction(
+            confirmationCreatorService.createEvidenceAction(confirmation.getEvidenceType())
+        );
+        DomibusConnectorMessageDetails businessMsgDetails = businessMsg.getMessageDetails();
+        // set correct service derived from business msg
         evidenceTriggerMsgDetails.setService(businessMsgDetails.getService());
 
-        //set correct original sender / final recipient
+        // set correct original sender / final recipient
         evidenceTriggerMsgDetails.setOriginalSender(businessMsgDetails.getFinalRecipient());
         evidenceTriggerMsgDetails.setFinalRecipient(businessMsgDetails.getOriginalSender());
-        //set correct from/to party
+        // set correct from/to party
         evidenceTriggerMsgDetails.setFromParty(businessMsgDetails.getToParty());
         evidenceTriggerMsgDetails.setToParty(businessMsgDetails.getFromParty());
 
@@ -83,23 +102,28 @@ public class EvidenceTriggerStep implements MessageProcessStep {
         if (!DomainModelHelper.isEvidenceTriggerMessage(evidenceTriggerMsg)) {
             throwException(evidenceTriggerMsg, "The message is not an evidence trigger message!");
         }
-        MessageTargetSource source = evidenceTriggerMsg.getMessageDetails().getDirection().getSource();
+        MessageTargetSource source =
+            evidenceTriggerMsg.getMessageDetails().getDirection().getSource();
         if (source != MessageTargetSource.BACKEND) {
             throwException(evidenceTriggerMsg, "Only backend can generate trigger messages");
         }
     }
 
     private void throwException(DomibusConnectorMessage evidenceTriggerMsg, String s) {
-        throw new DomibusConnectorMessageException(evidenceTriggerMsg, EvidenceTriggerStep.class, s);
+        throw new DomibusConnectorMessageException(
+            evidenceTriggerMsg, EvidenceTriggerStep.class, s);
     }
 
-    private DomibusConnectorEvidenceType getEvidenceType(DomibusConnectorMessage evidenceTriggerMsg) {
+    private DomibusConnectorEvidenceType getEvidenceType(
+        DomibusConnectorMessage evidenceTriggerMsg) {
         if (!DomainModelHelper.isEvidenceTriggerMessage(evidenceTriggerMsg)) {
-            throw new DomibusConnectorMessageException(evidenceTriggerMsg, EvidenceTriggerStep.class, "The message is not an evidence trigger msg!");
+            throw new DomibusConnectorMessageException(
+                evidenceTriggerMsg, EvidenceTriggerStep.class,
+                "The message is not an evidence trigger msg!"
+            );
         }
-        DomibusConnectorMessageConfirmation msgConfirmation = evidenceTriggerMsg.getTransportedMessageConfirmations().get(0);
+        DomibusConnectorMessageConfirmation msgConfirmation =
+            evidenceTriggerMsg.getTransportedMessageConfirmations().getFirst();
         return msgConfirmation.getEvidenceType();
     }
-
-
 }
