@@ -1,5 +1,7 @@
 package eu.domibus.connector.controller.queues;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import eu.domibus.connector.controller.processor.CleanupMessageProcessor;
 import eu.domibus.connector.controller.processor.EvidenceMessageProcessor;
 import eu.domibus.connector.controller.processor.ToBackendBusinessMessageProcessor;
@@ -13,6 +15,14 @@ import eu.domibus.connector.controller.service.SubmitToLinkService;
 import eu.domibus.connector.domain.model.DomibusConnectorMessage;
 import eu.domibus.connector.domain.model.DomibusConnectorMessageId;
 import eu.domibus.connector.domain.testutil.DomainEntityCreator;
+import java.util.ArrayList;
+import java.util.List;
+import javax.jms.ConnectionFactory;
+import javax.jms.Destination;
+import javax.jms.JMSException;
+import javax.jms.Message;
+import javax.jms.MessageConsumer;
+import javax.jms.Queue;
 import org.apache.activemq.artemis.jms.client.ActiveMQQueue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
@@ -29,18 +39,14 @@ import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.support.TransactionTemplate;
 
-import javax.jms.*;
-import java.util.ArrayList;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-@SpringBootTest(classes = {DeleteMessagesFromQueuesTest.MyTestContext.class}, properties = {"spring.liquibase.enabled=false"})
+@SpringBootTest(
+    classes = {DeleteMessagesFromQueuesTest.MyTestContext.class},
+    properties = {"spring.liquibase.enabled=false"}
+)
 @ActiveProfiles({"test", "jms-test"})
 @DirtiesContext
 @Disabled // does not run on CI
-public class DeleteMessagesFromQueuesTest {
-
+class DeleteMessagesFromQueuesTest {
     @SpringBootApplication
     public static class MyTestContext {
         @Bean("TestQueue1")
@@ -53,7 +59,6 @@ public class DeleteMessagesFromQueuesTest {
             return new ActiveMQQueue("dlq1");
         }
     }
-
 
     public List<Message> receiveAllFromQueue(Destination destination) {
         return nonXaJmsTemplate.execute(session -> {
@@ -71,65 +76,46 @@ public class DeleteMessagesFromQueuesTest {
     @Autowired
     @Qualifier("TestQueue1")
     Queue q1;
-
     @Autowired
     @Qualifier("TestDlq1")
     Queue dlq1;
-
     @MockBean
     SubmitToLinkService submitToLinkService;
-
     @MockBean
     SubmitToConnector submitToConnector;
-
     @MockBean
     EvidenceMessageProcessor evidenceMessageProcessor;
-
     @MockBean
     ToBackendBusinessMessageProcessor toBackendBusinessMessageProcessor;
-
     @MockBean
     ToGatewayBusinessMessageProcessor toGatewayBusinessMessageProcessor;
-
     @MockBean
     ToLinkPartnerListener toLinkPartnerListener;
-
     @MockBean
     CleanupMessageProcessor cleanupMessageProcessor;
-
     @Autowired
     ToLinkQueue toLinkQueueProducer;
-
     @Autowired
     ToConnectorQueue toConnectorQueueProducer;
-
-
     @Autowired
     ToCleanupQueue toCleanupQueueProducer;
-
     @Autowired
     QueuesConfigurationProperties queuesConfigurationProperties;
-
     @Autowired
     TransactionTemplate txTemplate;
-
     // Inject the primary (XA aware) ConnectionFactory
     @Autowired
     private ConnectionFactory defaultConnectionFactory;
-
     // Inject the XA aware ConnectionFactory (uses the alias and injects the same as above)
     @Autowired
     @Qualifier("xaJmsConnectionFactory")
     private ConnectionFactory xaConnectionFactory;
-
     // Inject the non-XA aware ConnectionFactory
     @Autowired
     @Qualifier("nonXaJmsConnectionFactory")
     private ConnectionFactory nonXaConnectionFactory;
-
     @Autowired
     JmsTemplate nonXaJmsTemplate;
-
     @Autowired
     MessageConverter converter;
 
@@ -140,8 +126,7 @@ public class DeleteMessagesFromQueuesTest {
     }
 
     @Test
-    public void it_is_possible_to_delete_specific_msgs_from_queues_and_dlqs() throws JMSException {
-
+    void it_is_possible_to_delete_specific_msgs_from_queues_and_dlqs() throws JMSException {
         // Arrange
         final QueueHelper sut = new QueueHelper(q1, dlq1, nonXaJmsTemplate);
         DomibusConnectorMessage msgDlq = DomainEntityCreator.createMessage();
@@ -153,8 +138,8 @@ public class DeleteMessagesFromQueuesTest {
         nonXaJmsTemplate.setReceiveTimeout(1000L);
         final List<Message> queue = sut.listAllMessages();
         final List<Message> dlq = sut.listAllMessagesInDlq();
-        final Message jmsMsgQueue = queue.get(0);
-        final Message jmsMsgDlq = dlq.get(0);
+        final Message jmsMsgQueue = queue.getFirst();
+        final Message jmsMsgDlq = dlq.getFirst();
 
         // Assert Precondition
         assertThat(queue).isNotEmpty();
@@ -163,11 +148,14 @@ public class DeleteMessagesFromQueuesTest {
         // Act
         sut.deleteMsg(jmsMsgQueue);
         sut.deleteMsg(jmsMsgDlq);
-        sut.deleteMsg(jmsMsgDlq); // tests that code works if you delete a msg that is not there, should be in another test, but no time
+        sut.deleteMsg(
+            // tests that code works if you delete a msg that is not there, should be in another
+            // test, but no time
+            jmsMsgDlq
+        );
 
         // Assert
         assertThat(sut.listAllMessages()).isEmpty();
         assertThat(sut.listAllMessagesInDlq()).isEmpty();
     }
-
 }
